.k8s/ircd.yaml
apiVersion: v1
kind: Service
metadata:
  name: ergo-internal
  labels:
    app: ergo
spec:
  type: ClusterIP
  ipFamilyPolicy: RequireDualStack
  ipFamilies: ["IPv6", "IPv4"]
  ports:
    - name: plain
      port: 6667
      targetPort: plain
  selector:
    app: ergo
---
apiVersion: v1
kind: Service
metadata:
  name: ergo-external
  labels:
    app: ergo
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ipFamilyPolicy: RequireDualStack
  ipFamilies: ["IPv6", "IPv4"]
  ports:
    - name: secure
      port: 6697
      targetPort: secure
      nodePort: 6697
    - name: websocket
      port: 6699
      targetPort: websocket
      nodePort: 6699
  selector:
    app: ergo
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: suprachat
  name: ssl-header
spec:
  headers:
    customRequestHeaders:
      Connection: keep-alive, Upgrade
      Upgrade: websocket
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: suprachat
  name: ergo-cors
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "OPTIONS"
      - "PUT"
      - "PATCH"
    accessControlAllowOriginList:
      - "https://suprachat.net"
      - "https://chat.suprachat.net"
      - "https://*.suprachat.net"
    accessControlMaxAge: 100
    addVaryHeader: true
    accessControlAllowHeaders:
      - "Accept"
      - "Authorization"
      - "Content-Type"
      - "Connection"
      - "Upgrade"
      - "X-Forwarded-Proto"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ergo
  namespace: suprachat
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ergo
  template:
    metadata:
      labels:
        app: ergo
    spec:
      shareProcessNamespace: true
      containers:
        - name: ergo
          image: ghcr.io/ergochat/ergo:v2.11.1
          ports:
            - containerPort: 6667
              name: plain
            - containerPort: 6697
              name: secure
            - containerPort: 443
              name: websocket
          readinessProbe:
            tcpSocket:
              port: 6697
          livenessProbe:
            tcpSocket:
              port: 6697
          volumeMounts:
            - name: ergo-storage
              mountPath: /ircd/db/
            - name: ergo-cert
              mountPath: /ircd/tls/
              readOnly: true
            - name: ergo-config
              mountPath: /ircd/
            - name: dkim
              mountPath: /ircd/dkim/
              readOnly: true
            - name: lang
              mountPath: /ircd/lang/
              readOnly: true
      volumes:
        - name: ergo-config
          configMap:
            name: ergo-config
        - name: ergo-storage
          persistentVolumeClaim:
            claimName: ergo-storage
        - name: ergo-cert
          secret:
            secretName: ergo-cert
        - name: dkim
          secret:
            secretName: ergo-dkim
        - name: lang
          configMap:
            name: ergo-lang
