.k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suprachat
---
apiVersion: v1
kind: Service
metadata:
  name: suprachat-backend
  namespace: suprachat
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: suprachat-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suprachat-backend
  namespace: suprachat
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: suprachat-backend
  template:
    metadata:
      labels:
        app: suprachat-backend
    spec:
      containers:
        - name: suprachat-backend
          image: <IMAGE>
          ports:
            - name: web
              containerPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suprachat-backend
  namespace: suprachat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
      - beta-api.suprachat.net
      secretName: sc-backend-cert
  rules:
    - host: beta-api.suprachat.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: suprachat-backend
                port:
                  name: web
